# slack-emoji-grid

./: Cargo.toml  README.md
src/: main.rs
src/emoji/: iterator.rs  mod.rs
