[package]
name = "slack-emoji-grid"
version = "0.1.0"
authors = ["Bernardo de Araujo <bernardo.amc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.23.2"
reqwest = "0.9.3"
structopt = "0.2"
